--- a/main.html
+++ b/main.html
@@ -52,6 +52,7 @@
         <div class="div-playlists" id="div-playlists"></div>
     </div>
 
-    <iframe src="/nav.html" style="border: none;height: 95px;" class="nav"></iframe>
+    <iframe src="nav.html" style="border: none;height: 95px;" class="nav"></iframe>
 </body>
+
 </html>
