--- a/nav.html
+++ b/nav.html
@@ -14,13 +14,13 @@
 </head>
 <body style="margin: 0;width: 100%;height: 100%;">
     <div id="nav" class="nav" style="width: 100%;height: 100%;margin: 0;">
-        <div class="nav-tab" id="ExploreTab">
+        <div class="nav-tab" id="ExploreTab" title="Explorer">
             Explorer
         </div>
-        <div class="nav-tab" id="WelcomeTab">
+        <div class="nav-tab" id="WelcomeTab" title="Accueil">
             Accueil
         </div>
-        <div class="nav-tab" id="AccountTab">
+        <div class="nav-tab" id="AccountTab" title="Compte">
             Compte
         </div>
     </div>
