--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
             <h2 class="playlist-banner-title" id="playlist-banner-title"></h2>
         </div>
         <div style="display: flex;flex-direction: column;align-items: center;align-items: center;gap: 32px;">
-            <playlist-img></playlist-img>
+            <playlist-img onclick="navigator.mediaSession.playbackState = 'playing';"></playlist-img>
             <div style="display: flex;flex-direction: column;align-items: center;align-items: center;gap: 5px;">
                 <div id="playlist-title-items" class="playlist-text-title"></div>
                 <div id="playlist-author-items" class="playlist-text-author"></div>
