--- a/main.html
+++ b/main.html
@@ -52,6 +52,8 @@
         <div class="div-playlists" id="div-playlists"></div>
     </div>
 
+    <yt-music-player id="mp"></yt-music-player>
+
     <iframe src="nav.html" style="border: none;height: 70px;" class="nav"></iframe>
 </body>
 
