--- a/main.html
+++ b/main.html
@@ -16,6 +16,7 @@
     <script src="https://accounts.google.com/gsi/client"></script>
     <script src="https://cdnjs.cloudflare.com/polyfill/v2/polyfill.min.js?features=es6,Array.prototype.includes,CustomEvent,Object.entries,Object.values,URL"></script>
     <script src="https://unpkg.com/plyr@3"></script>
+    <script src="bezierEasing.js"></script>
     <script src="music.js" defer></script>
     <script src="script.js" defer></script>
 
@@ -54,7 +55,7 @@
 
     <yt-music-player id="mp"></yt-music-player>
 
-    <iframe src="nav.html" style="border: none;height: 70px;" class="nav"></iframe>
+    <iframe src="nav.html" style="border: none;height: 70px;z-index: 3;" class="nav"></iframe>
 </body>
 
 </html>
