--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 
 </head>
 <body>
-    <div style="width:100%;height:100%;overflow-x:hidden;position: relative;">
+    <div style="width:100%;height:100%;overflow-x:hidden;position: absolute;top:0;left:0;">
         <div class="container" style="display: none;">
             <div id="player" data-plyr-provider="youtube" data-plyr-embed-id="gEmNIXjfu2E"></div>
         </div>
@@ -61,4 +61,5 @@
     </div>
 </body>
 </html>
+
 
