--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 <body>
     <div style="width:100%;height:100%;overflow-x:hidden;position: relative;">
         <div class="container" style="display: none;">
-            <div id="player" data-plyr-provider="youtube" data-plyr-embed-id="gEmNIXjfu2E"></div>
+            <div id="player" data-plyr-provider="youtube" data-plyr-embed-id=""></div>
         </div>
         
         <button onclick="authenticate()" style="display: none;" id="btn-signin">Sign In</button>
