--- a/main.html
+++ b/main.html
@@ -65,13 +65,13 @@
                     </div>
                 </div>
                 <div class="div-videos" id="div-videos">
-                    Aucune video n'est disponible.
+                    <h2 class="channel-nav-text-error">Aucune video n'est disponible.</h2>
                 </div>
                 <div class="div-shorts" id="div-shorts">
-                    Aucun short n'est disponible.
+                    <h2 class="channel-nav-text-error">Aucun short n'est disponible.</h2>
                 </div>
                 <div class="div-playlists" id="div-playlists">
-                    Aucune playlist n'est disponible.&nbsp;&nbsp;&nbsp;&nbsp;
+                    <h2 class="channel-nav-text-error">Aucune playlist n'est disponible.</h2>
                 </div>
             </div>
             
