--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div style="width:100%;height:100%;overflow-x:hidden;position: relative;">
-        <div class="container" style="/*display: none;*/">
+        <div class="container" style="display: none;">
             <div id="player" data-plyr-provider="youtube" data-plyr-embed-id=""></div>
         </div>
         
@@ -99,5 +99,6 @@
     </div>
 </body>
 </html>
+
 
 
