--- a/auth/callback/redirect.html
+++ b/auth/callback/redirect.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-    <button href="https://tenrommusic.com/oauth?source=website_button" id="btn-signin">Go to the app</button>
+    <a href="https://tenrommusic.com/oauth?source=website_button" id="btn-signin">Go to the app</a>
 </body>
 </html>
 
