--- a/auth/callback/redirect.html
+++ b/auth/callback/redirect.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-    <button onclick="goApp()" id="btn-signin">Go to the app</button>
+    <button onclick="goApp()" class="btn-signin" id="btn-signin">Go to the app</button>
 </body>
 </html>
 
