--- a/auth/callback/redirect.html
+++ b/auth/callback/redirect.html
@@ -19,6 +19,7 @@
 </head>
 <body>
     <button onclick="goApp()" class="btn-signin" id="btn-signin">Go to the app</button>
+    <p id="token" class="token"></p>
 </body>
 </html>
 
