Update redirect.html to hide token element
Hide the token paragraph by default.

--- a/auth/callback/redirect.html
+++ b/auth/callback/redirect.html
@@ -19,9 +19,10 @@
 </head>
 <body>
     <button onclick="goApp()" class="btn-signin" id="btn-signin">Go to the app</button>
-    <p id="token" class="token"></p>
+    <p style="display:none;" id="token" class="token"></p>
 </body>
 </html>
+
 
 
 
