--- a/main.html
+++ b/main.html
@@ -45,8 +45,7 @@
                     <div id="playlist-author-items" class="playlist-text-author"></div>
                 </div>
             </div>
-            <div class="btn-play" id="btn-play" style="display: none;">
-            </div>
+            <div class="btn-play" id="btn-play" style="display: none;"></div>
             <div class="div-playlists-items" id="div-playlists-items"></div>
         </div>
 
